--- a/Leave_Management/Views/_ViewImports.cshtml
+++ b/Leave_Management/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Leave_Management
+@using Leave_Management.Data;
 @using Leave_Management.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
